--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sigmar&display=swap');
 
 *{
     padding: 0;
@@ -10,4 +11,35 @@ body{
     background-image: url("/img/black-bg3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: 'Roboto', serif;
+}
+
+.header{
+    background-color: rgba(0, 0, 0, 0.301);
+    color: white;
+    padding: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header h1{
+    font-family: 'Sigmar', serif;
+    font-size: 2em;
+}
+
+.header button{
+    font-size: 1em;
+    padding: 1em;
+    background-color: white;
+    font-weight: 600;
+    border: 3px solid #996600;
+    color: black;
+    border-radius: 1em;
+}
+
+.header button:hover{
+    background-color: #996600;
+    color: white;
+    border: 3px solid white;
 }
