--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Roboto', serif;
+    overflow-x: hidden;
 }
 
 .header{
@@ -50,7 +51,7 @@ body{
 }
 
 .moving-not{
-    background-color: rgba(53, 165, 146, 0.123);
+    background-color: #99660025;
     padding: 8px;
     border-top: 1px solid rgba(41, 39, 39, 0.11);
     border-bottom: 1px solid white;
@@ -65,7 +66,7 @@ body{
 }
 
 form{
-    display: flex;
+    display: none;
     align-items: center;
     min-height: 100vh;
 }
@@ -136,6 +137,20 @@ gap: 1em;
     color: white;
     border: 3px solid white;
     cursor: pointer;
+}
+
+.active{
+    display: flex;
+}
+
+.blur{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(6px)
 }
 
 @keyframes movingText{
