--- a/style/style.css
+++ b/style/style.css
@@ -76,7 +76,7 @@ fieldset{
     background-color: rgba(255, 255, 255, 0.144);
     width: 50%;
     margin: 0 auto;
-    height: 60vh;
+    height: 62vh;
 }
 
 fieldset h1 {
@@ -104,6 +104,8 @@ fieldset input::placeholder, fieldset label{
 fieldset select{
     width: 100%;
     padding: .5em;
+    font-size: 1em;
+    font-weight: 600;
 }
 
 .dropdown{
