--- a/style/style.css
+++ b/style/style.css
@@ -15,8 +15,16 @@ body{
     overflow-x: hidden;
 }
 
+.header-wrapper{
+    position: relative;
+    /* position: fixed;
+    top: 0;
+    right: 0;
+    left: 0; */
+}
+
 .header{
-    background-color: rgba(0, 0, 0, 0.301);
+    background-color: rgba(0, 0, 0, 0.507);
     color: white;
     padding: 2em;
     display: flex;
@@ -50,7 +58,7 @@ body{
     transition: transform 250ms;
 }
 
-.moving-not{
+div.moving-not{
     background-color: #99660025;
     padding: 8px;
     border-top: 1px solid rgba(41, 39, 39, 0.11);
@@ -59,6 +67,8 @@ body{
     font-size: 1.25em;
     font-weight: 700;
     text-align: center;
+    position: sticky;
+    top: 0;
 }
 
 .moving-not p{
@@ -153,6 +163,75 @@ gap: 1em;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(6px)
+}
+
+.wrapper{
+    display: flex;
+    justify-content: center;
+}
+
+
+.book-card{
+    background-color: #f5f5f567;
+    border: 2px solid white;
+    border-radius: 20px;
+    box-shadow: inset 0 0 0 10px white;
+    animation: borderCol 5s linear 500ms infinite alternate forwards;
+    transition: box-shadow ;
+    padding: 2em;
+    margin: 2em 0;
+    color: black;
+}
+
+.book-card h2{
+    font-size: 1.5em;
+    font-weight: 800;
+    margin-bottom: .5em;
+}
+
+.book-card p{
+    margin-bottom: .25em;
+    font-weight: 600;
+}
+
+.book-card .del-cont{
+    display: flex;
+    justify-content: end;
+}
+
+.book-card .del-btn{
+    font-size: 1em;
+    padding: .5em 1.5em;
+    background-color: white;
+    font-weight: 600;
+    border: 3px solid #996600;
+    color: black;
+    border-radius: .5em;
+}
+
+.del-btn:hover{
+    background-color: #996600;
+    color: white;
+    border: 3px solid white;
+    cursor: pointer;
+}
+
+@keyframes borderCol{
+    25% {
+        box-shadow: inset 0 0 0 10px white;
+        border: 2px solid white;
+    }
+
+    50% {
+         box-shadow: inset 0 0 0 10px #996600;
+        border: 2px solid #996600;
+       
+    }
+
+    100% {
+        box-shadow: inset 0 0 0 10px black;
+        border: 2px solid black;
+    }
 }
 
 @keyframes movingText{
