--- a/style/style.css
+++ b/style/style.css
@@ -15,14 +15,6 @@ body{
     overflow-x: hidden;
 }
 
-.header-wrapper{
-    position: relative;
-    /* position: fixed;
-    top: 0;
-    right: 0;
-    left: 0; */
-}
-
 .header{
     background-color: rgba(0, 0, 0, 0.507);
     color: white;
@@ -172,7 +164,7 @@ gap: 1em;
 
 
 .book-card{
-    background-color: #f5f5f567;
+    background-color: rgba(255, 255, 255, 0.842);
     border: 2px solid white;
     border-radius: 20px;
     box-shadow: inset 0 0 0 10px white;
@@ -218,8 +210,8 @@ gap: 1em;
 
 @keyframes borderCol{
     25% {
-        box-shadow: inset 0 0 0 10px white;
-        border: 2px solid white;
+        box-shadow: inset 0 0 0 10px rgb(97, 89, 89);
+        border: 2px solid rgb(97, 89, 89);
     }
 
     50% {
@@ -242,4 +234,24 @@ gap: 1em;
     to {
         transform: translateX(-100%);
     }
+}
+
+@media (min-width:1200px) {
+    .moving-not{
+        margin-bottom: 2em;
+    }
+
+    .container{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 0 1.5em;
+    }
+
+    .book-card{
+    margin-bottom: 1em;
+}
+
+.book-card p{
+    font-size: 1.25em;
+}
 }
