--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-image: url("/img/black-bg3.jpg");
+    background-image: url("../img/black-bg3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Roboto', serif;
