--- a/style/style.css
+++ b/style/style.css
@@ -76,9 +76,9 @@ form{
 fieldset{
     border: none;
     background-color: rgba(255, 255, 255, 0.144);
-    width: 50%;
+    width: 80%;
     margin: 0 auto;
-    height: 62vh;
+    height: 52vh;
 }
 
 fieldset h1 {
@@ -152,7 +152,7 @@ gap: 1em;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(6px)
 }
@@ -233,6 +233,13 @@ gap: 1em;
 
     to {
         transform: translateX(-100%);
+    }
+}
+
+
+@media (max-width:550px) {
+    div.moving-not{
+        font-size: 1em;
     }
 }
 
