--- a/style/style.css
+++ b/style/style.css
@@ -262,3 +262,21 @@ gap: 1em;
     font-size: 1.25em;
 }
 }
+
+
+@media (min-width:1800px) {
+    .header h1{
+    font-size: 3em;
+}
+
+.header button{
+    font-size: 1.25em;
+}
+
+div.moving-not{
+    font-size: 1.5em;
+}
+    .moving-not p{
+    animation: movingText 24s linear 10ms infinite normal;
+}
+}
