remove unuse code

--- a/style/style.css
+++ b/style/style.css
@@ -75,11 +75,9 @@ form{
 
 fieldset{
     border: none;
-    /* background-color: rgba(255, 255, 255, 0.144); */
     background-color: rgba(255, 255, 255, 0.89);
     width: 80%;
     margin: 0 auto;
-    height: 52vh;
 }
 
 fieldset h1 {
@@ -245,21 +243,22 @@ gap: 1em;
 @media (max-width:400px) {
     div.moving-not{
         font-size: .5em;
+        padding: 7px;
+    }
+
+    .book-card{
+        padding: 1em;
     }
 }
 
 
 @media (max-width:550px) {
     .header h1{
-        font-size: 1em;
+        font-size: 1.25em;
     }
 
     .header button{
-        font-size: .5em;
-    }
-    
-    div.moving-not{
-        font-size: 1em;
+        font-size: .75em;
     }
 }
 
