--- a/style/style.css
+++ b/style/style.css
@@ -1,301 +1,297 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Sigmar&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sigmar&display=swap");
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background-image: url("../img/black-bg3.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: 'Roboto', serif;
-    overflow-x: hidden;
+body {
+  background-image: url("../img/black-bg3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: "Roboto", serif;
+  overflow-x: hidden;
 }
 
-.header{
-    background-color: rgba(0, 0, 0, 0.507);
-    color: white;
-    padding: 2em;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.header {
+  background-color: rgba(0, 0, 0, 0.507);
+  color: white;
+  padding: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.header h1{
-    font-family: 'Sigmar', serif;
-    font-size: 2em;
-    text-shadow: 4px 4px 2px #996600a2, -4px -4px 2px #996600a2;
+.header h1 {
+  font-family: "Sigmar", serif;
+  font-size: 2em;
+  text-shadow: 4px 4px 2px #996600a2, -4px -4px 2px #996600a2;
 }
 
-.header button{
-    font-size: 1em;
-    padding: 1em;
-    background-color: white;
-    font-weight: 600;
-    border: 3px solid #996600;
-    color: black;
-    border-radius: 1em;
-    transition: transform 500ms;
+.header button {
+  font-size: 1em;
+  padding: 1em;
+  background-color: white;
+  font-weight: 600;
+  border: 3px solid #996600;
+  color: black;
+  border-radius: 1em;
+  transition: transform 500ms;
 }
 
-.header button:hover{
-    background-color: #996600;
-    color: white;
-    border: 3px solid white;
-    cursor: pointer;
-    transform: translateY(-0.25em);
-    transition: transform 250ms;
+.header button:hover {
+  background-color: #996600;
+  color: white;
+  border: 3px solid white;
+  cursor: pointer;
+  transform: translateY(-0.25em);
+  transition: transform 250ms;
 }
 
-div.moving-not{
-    background-color: #99660025;
-    padding: 8px;
-    border-top: 1px solid rgba(41, 39, 39, 0.11);
-    border-bottom: 1px solid white;
-    color: rgba(255, 255, 255, 0.884);
-    font-size: 1.25em;
-    font-weight: 700;
-    text-align: center;
-    position: sticky;
-    top: 0;
+div.moving-not {
+  background-color: #99660025;
+  padding: 8px;
+  border-top: 1px solid rgba(41, 39, 39, 0.11);
+  border-bottom: 1px solid white;
+  color: rgba(255, 255, 255, 0.884);
+  font-size: 1.25em;
+  font-weight: 700;
+  text-align: center;
+  position: sticky;
+  top: 0;
 }
 
-.moving-not p{
-    animation: movingText 12s linear 10ms infinite normal;
+.moving-not p {
+  animation: movingText 12s linear 10ms infinite normal;
 }
 
-form{
-    display: none;
-    align-items: center;
-    min-height: 100vh;
+form {
+  display: none;
+  align-items: center;
+  min-height: 100vh;
 }
 
-fieldset{
-    border: none;
-    background-color: rgba(255, 255, 255, 0.89);
-    width: 80%;
-    margin: 0 auto;
+fieldset {
+  border: none;
+  background-color: rgba(255, 255, 255, 0.89);
+  width: 80%;
+  margin: 0 auto;
 }
 
 fieldset h1 {
-    background-image: url("../img/lib2.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url("../img/lib2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 1em;
+  text-align: center;
+  color: white;
+  text-shadow: 4px 5px 5px #996600, -4px -5px 5px #996600;
+}
+
+fieldset input {
+  width: 100%;
+  padding: 1.25em;
+  margin: 1em 0;
+  background-color: rgba(153, 150, 150, 0.945);
+  border: 2px solid rgba(153, 150, 150, 0.945);
+}
+
+fieldset input::placeholder,
+fieldset label {
+  color: black;
+  font-size: 1.5em;
+  font-weight: 600;
+}
+
+fieldset select {
+  width: 100%;
+  padding: 0.5em;
+  font-size: 1em;
+  font-weight: 600;
+  background-color: rgba(153, 150, 150, 0.945);
+  border: 2px solid rgba(153, 150, 150, 0.945);
+}
+
+.dropdown {
+  display: flex;
+  gap: 0.75em;
+}
+
+.pop-up {
+  padding: 1em;
+}
+
+.buton {
+  display: flex;
+  justify-content: flex-end;
+  margin: 1em 0;
+  gap: 1em;
+}
+
+.btn {
+  font-size: 1em;
+  padding: 1em;
+  background-color: white;
+  font-weight: 600;
+  border: 3px solid #996600;
+  color: black;
+  border-radius: 1em;
+}
+
+.btn:hover {
+  background-color: #996600;
+  color: white;
+  border: 3px solid white;
+  cursor: pointer;
+}
+
+.active {
+  display: flex;
+}
+
+.blur {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(6px);
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.book-card {
+  background-color: rgba(255, 255, 255, 0.842);
+  border: 2px solid white;
+  border-radius: 20px;
+  box-shadow: inset 0 0 0 10px white;
+  animation: borderCol 5s linear 500ms infinite alternate forwards;
+  transition: box-shadow;
+  padding: 2em;
+  margin: 2em 0;
+  color: black;
+}
+
+.book-card h2 {
+  font-size: 1.5em;
+  font-weight: 800;
+  margin-bottom: 0.5em;
+}
+
+.book-card p {
+  margin-bottom: 0.25em;
+  font-weight: 600;
+}
+
+.book-card .del-cont {
+  display: flex;
+  justify-content: end;
+}
+
+.book-card .del-btn {
+  font-size: 1em;
+  padding: 0.5em 1.5em;
+  background-color: white;
+  font-weight: 600;
+  border: 3px solid #996600;
+  color: black;
+  border-radius: 0.5em;
+}
+
+.del-btn:hover {
+  background-color: #996600;
+  color: white;
+  border: 3px solid white;
+  cursor: pointer;
+}
+
+@keyframes borderCol {
+  25% {
+    box-shadow: inset 0 0 0 10px rgb(97, 89, 89);
+    border: 2px solid rgb(97, 89, 89);
+  }
+
+  50% {
+    box-shadow: inset 0 0 0 10px #996600;
+    border: 2px solid #996600;
+  }
+
+  100% {
+    box-shadow: inset 0 0 0 10px black;
+    border: 2px solid black;
+  }
+}
+
+@keyframes movingText {
+  from {
+    transform: translateX(100vw);
+  }
+
+  to {
+    transform: translateX(-100vw);
+  }
+}
+
+@media (max-width: 400px) {
+  div.moving-not {
+    font-size: 0.5em;
+    padding: 7px;
+  }
+
+  .book-card {
     padding: 1em;
-    text-align: center;
-    color: white;
-    text-shadow: 4px 5px 5px #996600, -4px -5px 5px #996600;
+  }
 }
 
-fieldset input{
-    width: 100%;
-    padding: 1.25em;
-    margin: 1em 0;
-    background-color: rgba(153, 150, 150, 0.945);
-    border: 2px solid rgba(153, 150, 150, 0.945);
+@media (max-width: 550px) {
+  .header h1 {
+    font-size: 1.25em;
+  }
+
+  .header button {
+    font-size: 0.75em;
+  }
 }
 
-fieldset input::placeholder, fieldset label{
-    color: black;
-    font-size: 1.5em;
-    font-weight: 600;
-}
+@media (min-width: 1200px) {
+  .moving-not {
+    margin-bottom: 2em;
+  }
 
-fieldset select{
-    width: 100%;
-    padding: .5em;
-    font-size: 1em;
-    font-weight: 600;
-    background-color: rgba(153, 150, 150, 0.945);
-    border: 2px solid rgba(153, 150, 150, 0.945);
-}
+  .container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0 1.5em;
+  }
 
-.dropdown{
-    display: flex;
-    gap: .75em;
-}
-
-.pop-up{
-    padding: 1em;
-}
-
-.buton{
-display: flex;
-justify-content: flex-end;
-margin: 1em 0;
-gap: 1em;
-}
-
-.btn{
-    font-size: 1em;
-    padding: 1em;
-    background-color: white;
-    font-weight: 600;
-    border: 3px solid #996600;
-    color: black;
-    border-radius: 1em;
-}
-
-.btn:hover{
-    background-color: #996600;
-    color: white;
-    border: 3px solid white;
-    cursor: pointer;
-}
-
-.active{
-    display: flex;
-}
-
-.blur{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(6px)
-}
-
-.wrapper{
-    display: flex;
-    justify-content: center;
-}
-
-
-.book-card{
-    background-color: rgba(255, 255, 255, 0.842);
-    border: 2px solid white;
-    border-radius: 20px;
-    box-shadow: inset 0 0 0 10px white;
-    animation: borderCol 5s linear 500ms infinite alternate forwards;
-    transition: box-shadow ;
-    padding: 2em;
-    margin: 2em 0;
-    color: black;
-}
-
-.book-card h2{
-    font-size: 1.5em;
-    font-weight: 800;
-    margin-bottom: .5em;
-}
-
-.book-card p{
-    margin-bottom: .25em;
-    font-weight: 600;
-}
-
-.book-card .del-cont{
-    display: flex;
-    justify-content: end;
-}
-
-.book-card .del-btn{
-    font-size: 1em;
-    padding: .5em 1.5em;
-    background-color: white;
-    font-weight: 600;
-    border: 3px solid #996600;
-    color: black;
-    border-radius: .5em;
-}
-
-.del-btn:hover{
-    background-color: #996600;
-    color: white;
-    border: 3px solid white;
-    cursor: pointer;
-}
-
-@keyframes borderCol{
-    25% {
-        box-shadow: inset 0 0 0 10px rgb(97, 89, 89);
-        border: 2px solid rgb(97, 89, 89);
-    }
-
-    50% {
-         box-shadow: inset 0 0 0 10px #996600;
-        border: 2px solid #996600;
-       
-    }
-
-    100% {
-        box-shadow: inset 0 0 0 10px black;
-        border: 2px solid black;
-    }
-}
-
-@keyframes movingText{
-    from {
-        transform: translateX(100vw);
-    }
-
-    to {
-        transform: translateX(-100vw);
-    }
-}
-
-
-@media (max-width:400px) {
-    div.moving-not{
-        font-size: .5em;
-        padding: 7px;
-    }
-
-    .book-card{
-        padding: 1em;
-    }
-}
-
-
-@media (max-width:550px) {
-    .header h1{
-        font-size: 1.25em;
-    }
-
-    .header button{
-        font-size: .75em;
-    }
-}
-
-@media (min-width:1200px) {
-    .moving-not{
-        margin-bottom: 2em;
-    }
-
-    .container{
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 0 1.5em;
-    }
-
-    .book-card{
+  .book-card {
     margin-bottom: 1em;
-}
+  }
 
-.book-card p{
+  .book-card p {
     font-size: 1.25em;
-}
+  }
 }
 
-
-@media (min-width:1800px) {
-    .header h1{
+@media (min-width: 1800px) {
+  .header h1 {
     font-size: 3em;
-}
+  }
 
-.header button{
+  .header button {
     font-size: 1.25em;
-}
+  }
 
-div.moving-not{
+  div.moving-not {
     font-size: 1.5em;
-}
-    .moving-not p{
+  }
+  .moving-not p {
     animation: movingText 24s linear 10ms infinite normal;
-}
+  }
 }
